# nictl

./: README.md  pyproject.toml
src/nictl/: main.py
